small cosmetic changes

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,21 +6,25 @@
    "source": [
     "This notebook compares the new and old NFT Worlds' staking formulas. There is 1.75 billion $WRLD reserved for staking rewards, to be distributed over a five year period. This defines a constant rate of rewards $R$. Each world owner will receive a fraction of these rewards based on the number of worlds they own as well as their rarity. \n",
     "\n",
-    "The rate of rewards as a function of world rarity is defined below. The new formula is a weighted average among all worlds that are staked at any one time. This means\n",
-    "that the number of worlds staked **and** the rarity of all staked worlds will influence the amount world owners will receive. The new formula ensures that at the end of five \n",
-    "years, all staking rewards will have been distributed. The old formula (if it's correct) would have depleted the $WRLD staking reserves in 3.8 years if every world was staked. \n",
+    "The new and old rate of rewards as a function of world rarity are defined as:\n",
     "\\begin{equation*}\n",
     "Rewards_{r, old} =(200 - ((r-1) * 0.015)\n",
     "\\end{equation*}\n",
     "\\begin{equation*}\n",
-    "Rewards_{r, new} = \\frac{ w(r)}{\\sum_{r^{'}\\in S}w(r^{'})} \\cdot R =  \\frac{ 40,003 - 3*r}{\\sum_{r^{'} \\in S}40,003-3*r^{'}} \\cdot R\n",
+    "Rewards_{r, new} = \\frac{ w(r)}{\\sum_{r^{'}\\in S}w(r^{'})} R =  \\frac{ 40,003 - 3*r}{\\sum_{r^{'} \\in S}40,003-3*r^{'}} R\n",
     "\\end{equation*}\n",
-    "Where $r$ is the rank of the world, and $S$ is the set of all staked worlds.\n"
+    "\n",
+    "Where $r$ is the rank of the world, $R$ is the constant, global reward rate defined above, and $S$ is the set of all staked worlds.\n",
+    "\n",
+    "The new formula is a weighted average among all worlds that are staked at any one time. This means\n",
+    "that the number of worlds staked **and** the rarity of all staked worlds will influence the amount world owners will receive. The new formula ensures that at the end of five years, all staking rewards will have been distributed. The old formula (if it's correct) would have depleted the $WRLD staking reserves in 3.8 years if every world was staked. \n",
+    "\n",
+    "**This comparison is not affiliated with NFT Worlds.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,12 +61,12 @@
     "With the new formula, the exact reward rate depends on not only how many worlds are staked, but the rarity of the staked worlds. \n",
     "While this seems overly complicated, it ensures that all staking rewards are distrubted in five years.\n",
     "\n",
-    "We'll calculate the new reward rate for different rarities, the fraction of worlds that are staked, and the rarity of the non-staked worlds. For example, if 50% of worlds are staked and the other 50% that are not staked are the 50% most rare worlds (rank 1 - 5,000) this will increase the staking rewards compared to if the 50% least rare worlds were not staked (rank 5,001-10,000). Each world that is not staked leaves more rewards in the staking pool and since rarer worlds have more weight, when rarer worlds are not staked, rewards increase even more. "
+    "We'll calculate the new reward rate for different rarities, the fraction of worlds that are staked, and the rarity of the non-staked worlds. For example, if 50% of worlds are not staked and those non-staked worlds also happen to be the top 5000 rare worlds, the staking rewards will be higher than if those non-staked worlds happened to be in the bottom 5000. Each world that is not staked leaves more rewards in the staking pool and since rarer worlds have more weight, when rarer worlds are not staked, rewards increase even more. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +136,12 @@
    "source": [
     "The table below shows the new daily rewards as a function of the world's rank, the fraction of overall worlds that are staked, and rarity of the non-staked worlds (listed worlds). The old rewards are listed for comparison, but keep in mind that they would have run out in 3.8 years if all worlds were staked.\n",
     "\n",
-    "We believe the most likely scenario will consist of 75% of worlds staked with the remaining 25% non-staked worlds consiting of the \"mid-rares\" (in this scenario there is no correlation between a world's rank and its likelihood to be staked, which may not be true). This scenario corresponds to rows 12-14 below; one can see that the new rewards are slightly higher than the old rewards **and** they will last for five years. "
+    "We believe the most likely scenario will consist of 75% of worlds staked with the remaining 25% non-staked worlds consisting of the \"mid-rares\" (in this scenario there is no correlation between a world's rank and its likelihood to be staked, which may not be true). This scenario corresponds to rows 12-14 below; one can see that the new rewards are slightly higher than the old rewards **and** they will last for five years. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,6 +434,11 @@
   }
  ],
  "metadata": {
+  "authors": [
+   {
+    "name": "Jordan Corbett-Frank"
+   }
+  ],
   "interpreter": {
    "hash": "53fb5a2b8bd52d767018a410433aba9b50fe692a0b9a350c31d09facec3988dc"
   },
