add result to first paragraph

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook compares the new and old NFT Worlds' staking formulas. There is 1.75 billion $WRLD reserved for staking rewards, to be distributed over a five year period. This defines a constant rate of rewards $R$. Each world owner will receive a fraction of these rewards based on the number of worlds they own as well as their rarity. \n",
+    "This notebook compares the new and old NFT Worlds' staking formulas. There is 1.75 billion $WRLD reserved for staking rewards, to be distributed over a five year period. This defines a constant rate of rewards $R$. Each world owner will receive a fraction of these rewards based on the number of worlds they own as well as their rarity. **Short story: the previous formula did not guarantee that staking rewards would last for five years; the new formula does guarantee this, and the daily staking rewards are likely to be slightly higher.**\n",
     "\n",
     "The new and old rate of rewards as a function of world rarity are defined as:\n",
     "\\begin{equation*}\n",
@@ -136,7 +136,7 @@
    "source": [
     "The table below shows the new daily rewards as a function of the world's rank, the fraction of overall worlds that are staked, and rarity of the non-staked worlds (listed worlds). The old rewards are listed for comparison, but keep in mind that they would have run out in 3.8 years if all worlds were staked.\n",
     "\n",
-    "We believe the most likely scenario will consist of 75% of worlds staked with the remaining 25% non-staked worlds consisting of the \"mid-rares\" (in this scenario there is no correlation between a world's rank and its likelihood to be staked, which may not be true). This scenario corresponds to rows 12-14 below; one can see that the new rewards are slightly higher than the old rewards **and** they will last for five years. "
+    "We believe the most likely scenario will consist of 75% of worlds staked with the remaining 25% non-staked worlds consisting of the \"mid-rares\" (in this scenario there is no correlation between a world's rank and its likelihood to be staked, which may not be true). This scenario corresponds to **rows 12-14** below; one can see that the new rewards are slightly higher than the old rewards **and** they will last for five years. "
    ]
   },
   {
